--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-/bin
-/bin_test
-/target
-/local
-/runner 
+bin/
+bin_test/
+target/
+local/
+runner/ 
 
 # Eclipse, Netbeans and IntelliJ files
 /.*
 !.gitignore
-/nbproject
+nbproject/
 /*.ipr
 /*.iws
 /*.iml
