added the bundle for the actions api

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
   <modules>
     <module>poms</module>
     <module>provision</module>
+    <module>org.livingplace.actions.api</module>
   </modules>
 
   <build>
