--- a/org.livingplace.actions.registry.api/pom.xml
+++ b/org.livingplace.actions.registry.api/pom.xml
@@ -10,13 +10,13 @@
     </parent>
 
     <properties>
-        <bundle.symbolicName>org.livingplace.actions.api</bundle.symbolicName>
-        <bundle.namespace>org.livingplace.actions.api</bundle.namespace>
+        <bundle.symbolicName>org.livingplace.actions.registry.api</bundle.symbolicName>
+        <bundle.namespace>org.livingplace.actions.registry.api</bundle.namespace>
     </properties>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.livingplace.bundles.controlling-actions</groupId>
-    <artifactId>org.livingplace.actions.api</artifactId>
+    <artifactId>org.livingplace.actions.registry.api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>${bundle.symbolicName}</name>
@@ -44,9 +44,19 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>org.livingplace.bundles.controlling-actions</groupId>
+            <artifactId>org.livingplace.actions.api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.scr.annotations</artifactId>
             <version>1.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.shell</artifactId>
+            <version>1.4.3</version>
         </dependency>
     </dependencies>
 
