--- a/pom.xml
+++ b/pom.xml
@@ -1,92 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <!--
-   | put company details here
-  <organization>
-    <name>...</name>
-    <url>http://...</url>
-  </organization>
-  -->
-
-  <!--
-   | put license details here
-  <licenses>
-    <license>
+    <!--
+     | put company details here
+    <organization>
       <name>...</name>
       <url>http://...</url>
-      <comments>
-      </comments>
-    </license>
-  </licenses>
-  -->
-
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.livingplace.bundles</groupId>
-  <artifactId>controlling-actions</artifactId>
-  <version>1.0-SNAPSHOT</version>
-
-  <name>org.livingplace.bundles.controlling-actions (OSGi project)</name>
-
-  <!--
-   | describe your project here
-  -->
-
-  <description>Generated using Pax-Construct</description>
-
-  <properties>
-    <!--
-     | some example OSGi runtime properties
+    </organization>
     -->
-    <org.osgi.service.http.port>8080</org.osgi.service.http.port>
-    <org.osgi.service.http.port.secure>8443</org.osgi.service.http.port.secure>
-  </properties>
 
-  <packaging>pom</packaging>
+    <!--
+     | put license details here
+    <licenses>
+      <license>
+        <name>...</name>
+        <url>http://...</url>
+        <comments>
+        </comments>
+      </license>
+    </licenses>
+    -->
 
-  <modules>
-    <module>poms</module>
-    <module>provision</module>
-    <module>org.livingplace.actions.api</module>
-  </modules>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.livingplace.bundles</groupId>
+    <artifactId>controlling-actions</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.ops4j</groupId>
-        <artifactId>maven-pax-plugin</artifactId>
-        <version>1.5</version>
-        <configuration>
-          <!--
-           | some example Pax-Runner settings
-          -->
-          <provision>
-            <param>--platform=felix</param>
-          </provision>
-        </configuration>
-        <executions>
-          <!--
-           | uncomment to auto-generate IDE files
-          <execution>
-            <id>ide-support</id>
-            <goals>
-              <goal>eclipse</goal>
-            </goals>
-          </execution>
-          -->
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+    <name>org.livingplace.bundles.controlling-actions (OSGi project)</name>
 
-  <repositories>
-    <repository>
-      <id>apache-felix.releases</id>
-      <url>http://felix.apache.org/obr/releases.xml</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
+    <!--
+     | describe your project here
+    -->
+
+    <description>Generated using Pax-Construct</description>
+
+    <properties>
+        <!--
+         | some example OSGi runtime properties
+        -->
+        <org.osgi.service.http.port>8080</org.osgi.service.http.port>
+        <org.osgi.service.http.port.secure>8443</org.osgi.service.http.port.secure>
+    </properties>
+
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>poms</module>
+        <module>provision</module>
+        <module>org.livingplace.actions.api</module>
+        <module>org.livingplace.actions.registry.api</module>
+    </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.ops4j</groupId>
+                <artifactId>maven-pax-plugin</artifactId>
+                <version>1.5</version>
+                <configuration>
+                    <!--
+                     | some example Pax-Runner settings
+                    -->
+                    <provision>
+                        <param>--platform=felix</param>
+                    </provision>
+                </configuration>
+                <executions>
+                    <!--
+                     | uncomment to auto-generate IDE files
+                    <execution>
+                      <id>ide-support</id>
+                      <goals>
+                        <goal>eclipse</goal>
+                      </goals>
+                    </execution>
+                    -->
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-scr-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>generate-scr-scrdescriptor</id>
+                        <goals>
+                            <goal>scr</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>apache-felix.releases</id>
+            <url>http://felix.apache.org/obr/releases.xml</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
