added the local dependency for scr and annotations to the project of registry directly. unsure wether it should be there or a bundle dependency from parent pom.

--- a/org.livingplace.actions.registry.api/pom.xml
+++ b/org.livingplace.actions.registry.api/pom.xml
@@ -55,6 +55,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
+            <artifactId>org.apache.felix.scr</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.shell</artifactId>
             <version>1.4.3</version>
         </dependency>
