--- a/poms/pom.xml
+++ b/poms/pom.xml
@@ -37,7 +37,10 @@
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
-          <version>1.4.3</version>
+          <version>2.3.7</version>
+          <!--<configuration>-->
+            <!--<obrRepository>file://felix.apache.org/obr/releases.xml</obrRepository>-->
+          <!--</configuration>-->
         </plugin>
       </plugins>
     </pluginManagement>
