--- a/poms/wrappers/pom.xml
+++ b/poms/wrappers/pom.xml
@@ -34,6 +34,7 @@
         -->
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
+        <version>2.3.7</version>
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
