--- a/poms/compiled/pom.xml
+++ b/poms/compiled/pom.xml
@@ -58,6 +58,7 @@
           <instructions>
             <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
             <Bundle-Version>${pom.version}</Bundle-Version>
+            <Bundle-Vendor>${pom.groupId}</Bundle-Vendor>
             <!--
              | assume public classes are in the top package, and private classes are under ".internal"
             -->
