--- a/org.livingplace.actions.api/pom.xml
+++ b/org.livingplace.actions.api/pom.xml
@@ -2,52 +2,57 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <parent>
-        <relativePath>../poms/compiled/</relativePath>
-        <groupId>org.livingplace.bundles.controlling-actions.build</groupId>
-        <artifactId>compiled-bundle-settings</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-
-    <properties>
-        <bundle.symbolicName>org.livingplace.actions.api</bundle.symbolicName>
-        <bundle.namespace>org.livingplace.actions.api</bundle.namespace>
-    </properties>
-
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.livingplace.bundles.controlling-actions</groupId>
-    <artifactId>org.livingplace.actions.api</artifactId>
+  <parent>
+    <relativePath>../poms/compiled/</relativePath>
+    <groupId>org.livingplace.bundles.controlling-actions.build</groupId>
+    <artifactId>compiled-bundle-settings</artifactId>
     <version>1.0-SNAPSHOT</version>
+  </parent>
 
-    <name>${bundle.symbolicName}</name>
+  <properties>
+    <bundle.symbolicName>org.livingplace.actions.api</bundle.symbolicName>
+    <bundle.namespace>org.livingplace.actions.api</bundle.namespace>
+  </properties>
 
-    <packaging>bundle</packaging>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.livingplace.bundles.controlling-actions</groupId>
+  <artifactId>org.livingplace.actions.api</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-    <dependencies>
-        <!--
-         | uncomment to add all imported (non-local) bundles to your compilation classpath
-        <dependency>
-          <type>pom</type>
-          <groupId>${parent.groupId}</groupId>
-          <artifactId>provision</artifactId>
-          <optional>true</optional>
-        </dependency>
-        -->
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>osgi_R4_core</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>osgi_R4_compendium</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.scr.annotations</artifactId>
-            <version>1.7.0</version>
-        </dependency>
-    </dependencies>
+  <name>${bundle.symbolicName}</name>
+
+  <packaging>bundle</packaging>
+
+  <dependencies>
+    <!--
+     | uncomment to add all imported (non-local) bundles to your compilation classpath
+    <dependency>
+      <type>pom</type>
+      <groupId>${parent.groupId}</groupId>
+      <artifactId>provision</artifactId>
+      <optional>true</optional>
+    </dependency>
+    -->
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>osgi_R4_core</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>osgi_R4_compendium</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.scr.annotations</artifactId>
+      <version>1.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.2</version>
+    </dependency>
+  </dependencies>
 
 </project>
