--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
           <source>1.6</source>
           <target>1.6</target>
         </configuration>
+        <version>2.5.1</version>
       </plugin>
     </plugins>
   </build>
