--- a/org.livingplace.actions.registry.api/pom.xml
+++ b/org.livingplace.actions.registry.api/pom.xml
@@ -73,5 +73,18 @@
       <artifactId>org.apache.felix.shell</artifactId>
       <version>1.4.3</version>
     </dependency>
+    <!-- Testing Dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
