--- a/org.livingplace.actions.registry.commands/pom.xml
+++ b/org.livingplace.actions.registry.commands/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <relativePath>../poms/compiled/</relativePath>
@@ -10,13 +9,13 @@
   </parent>
 
   <properties>
-    <bundle.symbolicName>org.livingplace.actions.api</bundle.symbolicName>
-    <bundle.namespace>org.livingplace.actions.api</bundle.namespace>
+    <bundle.symbolicName>org.livingplace.actions.registry.commands</bundle.symbolicName>
+    <bundle.namespace>org.livingplace.actions.registry.commands</bundle.namespace>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.livingplace.bundles.controlling-actions</groupId>
-  <artifactId>org.livingplace.actions.api</artifactId>
+  <groupId>org.livingplace.actions.registry.commands</groupId>
+  <artifactId>org.livingplace.actions.registry.commands</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>${bundle.symbolicName}</name>
@@ -44,11 +43,25 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>org.livingplace.bundles.controlling-actions</groupId>
+      <artifactId>org.livingplace.actions.registry.api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.scr</artifactId>
+      <version>1.6.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.scr.annotations</artifactId>
       <version>1.7.0</version>
     </dependency>
-    <!-- Testing Dependencies -->
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.shell</artifactId>
+      <version>1.4.3</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
