--- a/org.livingplace.actions.api/pom.xml
+++ b/org.livingplace.actions.api/pom.xml
@@ -19,7 +19,7 @@
   <artifactId>org.livingplace.actions.api</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>${bundle.symbolicName}</name>
+  <name>LivingPlace :: Controlling :: Actions :: API</name>
 
   <packaging>bundle</packaging>
 
