--- a/org.livingplace.actions.registry.commands/pom.xml
+++ b/org.livingplace.actions.registry.commands/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <relativePath>../poms/compiled/</relativePath>
@@ -18,7 +19,7 @@
   <artifactId>org.livingplace.actions.registry.commands</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>${bundle.symbolicName}</name>
+  <name>LivingPlace :: Controlling :: Actions :: Registry :: Commands</name>
 
   <packaging>bundle</packaging>
 
