--- a/org.livingplace.actions.registry.api/pom.xml
+++ b/org.livingplace.actions.registry.api/pom.xml
@@ -10,8 +10,8 @@
   </parent>
 
   <properties>
-    <bundle.symbolicName>org.livingplace.actions.registry.api</bundle.symbolicName>
-    <bundle.namespace>org.livingplace.actions.registry.api</bundle.namespace>
+    <bundle.symbolicName>${project.artifactId}</bundle.symbolicName>
+    <bundle.namespace>${project.artifactId}</bundle.namespace>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
@@ -22,16 +22,6 @@
   <name>LivingPlace :: Controlling :: Actions :: Registry :: API</name>
 
   <packaging>bundle</packaging>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.3.7</version>
-      </plugin>
-    </plugins>
-  </build>
 
   <dependencies>
     <!--
@@ -58,6 +48,7 @@
       <artifactId>org.livingplace.actions.api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <!-- Component Annotations Dependencies -->
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.scr</artifactId>
@@ -67,11 +58,6 @@
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.scr.annotations</artifactId>
       <version>1.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.apache.felix.shell</artifactId>
-      <version>1.4.3</version>
     </dependency>
     <!-- Testing Dependencies -->
     <dependency>
