--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <!--
      | put company details here
@@ -34,13 +33,14 @@
     -->
 
   <description>Generated using Pax-Construct</description>
-
   <properties>
     <!--
          | some example OSGi runtime properties
         -->
     <org.osgi.service.http.port>8080</org.osgi.service.http.port>
     <org.osgi.service.http.port.secure>8443</org.osgi.service.http.port.secure>
+
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <packaging>pom</packaging>
@@ -51,6 +51,8 @@
     <module>org.livingplace.actions.api</module>
     <module>org.livingplace.actions.registry.api</module>
     <module>org.livingplace.actions.registry.commands</module>
+    <module>org.livingplace.actions.registry.impl</module>
+    <module>org.livingplace.actions.actors.time</module>
   </modules>
 
   <build>
@@ -65,7 +67,6 @@
           -->
           <provision>
             <param>--platform=felix</param>
-
           </provision>
         </configuration>
         <executions>
