--- a/org.livingplace.actions.actors.time/pom.xml
+++ b/org.livingplace.actions.actors.time/pom.xml
@@ -42,6 +42,36 @@
       <artifactId>osgi_R4_compendium</artifactId>
       <optional>true</optional>
     </dependency>
+
+    <dependency>
+      <groupId>org.livingplace.bundles.controlling-actions</groupId>
+      <artifactId>org.livingplace.actions.registry.api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <!-- Component Annotations Dependencies -->
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.scr</artifactId>
+      <version>1.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.scr.annotations</artifactId>
+      <version>1.7.0</version>
+    </dependency>
+    <!-- Testing Dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
