completed refactoring, all like before

--- a/org.livingplace.controlling.actions.actors.time/pom.xml
+++ b/org.livingplace.controlling.actions.actors.time/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <relativePath>../poms/compiled/</relativePath>
@@ -9,8 +10,8 @@
   </parent>
 
   <properties>
-    <bundle.symbolicName>org.livingplace.actions.actors.time</bundle.symbolicName>
-    <bundle.namespace>org.livingplace.actions.actors</bundle.namespace>
+    <bundle.symbolicName>${project.artifactId}</bundle.symbolicName>
+    <bundle.namespace>${project.artifactId}</bundle.namespace>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
