--- a/org.livingplace.controlling.actions.api/pom.xml
+++ b/org.livingplace.controlling.actions.api/pom.xml
@@ -49,6 +49,11 @@
       <artifactId>org.apache.felix.scr</artifactId>
       <version>1.6.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.scr.annotations</artifactId>
+      <version>1.7.0</version>
+    </dependency>
     <!-- Testing Dependencies -->
     <dependency>
       <groupId>junit</groupId>
