--- a/poms/compiled/pom.xml
+++ b/poms/compiled/pom.xml
@@ -71,19 +71,19 @@
           </supportedProjectTypes>
           <instructions>
             <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-            <Bundle-Version>${pom.version}</Bundle-Version>
-            <Bundle-Vendor>${pom.groupId}</Bundle-Vendor>
+            <Bundle-Version>${project.version}</Bundle-Version>
+            <Bundle-Vendor>${project.groupId}</Bundle-Vendor>
             <!--
              | assume public classes are in the top package, and private classes are under ".internal"
             -->
-            <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
+            <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}"</Export-Package>
             <Private-Package>${bundle.namespace}.internal.*</Private-Package>
             <!--
              | each module can override these defaults in their osgi.bnd file
             -->
             <_include>-osgi.bnd</_include>
             <Service-Component>
-              OSGI-INF/*.xml
+              OSGI-INF/serviceComponents.xml
             </Service-Component>
           </instructions>
         </configuration>
