refactored it all. merged both projects into one and removed the different douplications of code. The commands namespaces couldn't be refactored since you're not able to inherit annotations in java.

--- a/provision/pom.xml
+++ b/provision/pom.xml
@@ -4,15 +4,15 @@
 
   <parent>
     <groupId>org.livingplace.bundles</groupId>
-    <artifactId>controlling-actions</artifactId>
+    <artifactId>controlling</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.livingplace.bundles.controlling-actions.build</groupId>
+  <groupId>org.livingplace.bundles.controlling.build</groupId>
   <artifactId>provision</artifactId>
 
-  <name>controlling-actions - imported bundles</name>
+  <name>controlling - imported bundles</name>
 
   <packaging>pom</packaging>
 
