--- a/org.livingplace.controlling.actions.actors.time/pom.xml
+++ b/org.livingplace.controlling.actions.actors.time/pom.xml
@@ -4,7 +4,7 @@
 
   <parent>
     <relativePath>../poms/compiled/</relativePath>
-    <groupId>org.livingplace.bundles.controlling-actions.build</groupId>
+    <groupId>org.livingplace.bundles.controlling.build</groupId>
     <artifactId>compiled-bundle-settings</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
@@ -15,7 +15,7 @@
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.livingplace.bundles.controlling-actions</groupId>
+  <groupId>org.livingplace.bundles.controlling</groupId>
   <artifactId>org.livingplace.controlling.actions.actors.time</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -45,7 +45,7 @@
     </dependency>
 
     <dependency>
-      <groupId>org.livingplace.bundles.controlling-actions</groupId>
+      <groupId>org.livingplace.bundles.controlling</groupId>
       <artifactId>org.livingplace.controlling.actions.registry.api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
