--- a/org.livingplace.controlling.actions.api/pom.xml
+++ b/org.livingplace.controlling.actions.api/pom.xml
@@ -4,7 +4,7 @@
 
   <parent>
     <relativePath>../poms/compiled/</relativePath>
-    <groupId>org.livingplace.bundles.controlling-actions.build</groupId>
+    <groupId>org.livingplace.bundles.controlling.build</groupId>
     <artifactId>compiled-bundle-settings</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
@@ -15,7 +15,7 @@
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.livingplace.bundles.controlling-actions</groupId>
+  <groupId>org.livingplace.bundles.controlling</groupId>
   <artifactId>org.livingplace.controlling.actions.api</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -42,6 +42,12 @@
       <groupId>org.osgi</groupId>
       <artifactId>osgi_R4_compendium</artifactId>
       <optional>true</optional>
+    </dependency>
+    <!-- Controlling Dependencies -->
+    <dependency>
+      <groupId>org.livingplace.bundles.controlling</groupId>
+      <artifactId> org.livingplace.controlling.api</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
     <!-- Component Annotations Dependencies -->
     <dependency>
