--- a/org.livingplace.controlling.actions.registry.impl/pom.xml
+++ b/org.livingplace.controlling.actions.registry.impl/pom.xml
@@ -3,7 +3,7 @@
 
   <parent>
     <relativePath>../poms/compiled/</relativePath>
-    <groupId>org.livingplace.bundles.controlling-actions.build</groupId>
+    <groupId>org.livingplace.bundles.controlling.build</groupId>
     <artifactId>compiled-bundle-settings</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
@@ -14,7 +14,7 @@
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.livingplace.bundles.controlling-actions</groupId>
+  <groupId>org.livingplace.bundles.controlling</groupId>
   <artifactId>org.livingplace.controlling.actions.registry.impl</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -43,12 +43,12 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>org.livingplace.bundles.controlling-actions</groupId>
+      <groupId>org.livingplace.bundles.controlling</groupId>
       <artifactId>org.livingplace.controlling.actions.registry.api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>org.livingplace.bundles.controlling-actions</groupId>
+      <groupId>org.livingplace.bundles.controlling</groupId>
       <artifactId>org.livingplace.controlling.actions.api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
