--- a/pom.xml
+++ b/pom.xml
@@ -23,23 +23,23 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.livingplace.bundles</groupId>
-  <artifactId>controlling-actions</artifactId>
+  <artifactId>controlling</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>org.livingplace.bundles.controlling-actions (OSGi project)</name>
+  <name>org.livingplace.bundles.controlling (OSGi project)</name>
 
   <!--
      | describe your project here
     -->
 
   <description>Generated using Pax-Construct</description>
+
   <properties>
     <!--
          | some example OSGi runtime properties
         -->
     <org.osgi.service.http.port>8080</org.osgi.service.http.port>
     <org.osgi.service.http.port.secure>8443</org.osgi.service.http.port.secure>
-
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -48,11 +48,16 @@
   <modules>
     <module>poms</module>
     <module>provision</module>
+    <module>org.livingplace.controlling.api</module>
     <module>org.livingplace.controlling.actions.api</module>
     <module>org.livingplace.controlling.actions.registry.api</module>
     <module>org.livingplace.controlling.actions.registry.commands</module>
     <module>org.livingplace.controlling.actions.registry.impl</module>
     <module>org.livingplace.controlling.actions.actors.time</module>
+    <module>org.livingplace.controlling.informations.api</module>
+    <module>org.livingplace.controlling.informations.registry.api</module>
+    <module>org.livingplace.controlling.informations.registry.commands</module>
+    <module>org.livingplace.controlling.informations.registry.impl</module>
   </modules>
 
   <build>
@@ -67,7 +72,6 @@
           -->
           <provision>
             <param>--platform=felix</param>
-
           </provision>
         </configuration>
         <executions>
