--- a/poms/pom.xml
+++ b/poms/pom.xml
@@ -4,15 +4,15 @@
 
   <parent>
     <groupId>org.livingplace.bundles</groupId>
-    <artifactId>controlling-actions</artifactId>
+    <artifactId>controlling</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.livingplace.bundles.controlling-actions.build</groupId>
+  <groupId>org.livingplace.bundles.controlling.build</groupId>
   <artifactId>shared-plugin-settings</artifactId>
 
-  <name>controlling-actions - plugin configuration</name>
+  <name>controlling - plugin configuration</name>
 
   <packaging>pom</packaging>
 
@@ -53,7 +53,7 @@
          | dependency pom representing the global classpath of imported bundles
         -->
         <type>pom</type>
-        <groupId>org.livingplace.bundles.controlling-actions.build</groupId>
+        <groupId>org.livingplace.bundles.controlling.build</groupId>
         <artifactId>provision</artifactId>
         <version>1.0-SNAPSHOT</version>
         <scope>provided</scope>
