Finished first working version of the Sensor registry together with a working sensor. Now document how things should be used.

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
     <module>org.livingplace.controlling.informations.registry.api</module>
     <module>org.livingplace.controlling.informations.registry.commands</module>
     <module>org.livingplace.controlling.informations.registry.impl</module>
+    <module>org.livingplace.controlling.informations.sensors.time</module>
   </modules>
 
   <build>
