--- a/org.livingplace.controlling.informations.sensors.time/pom.xml
+++ b/org.livingplace.controlling.informations.sensors.time/pom.xml
@@ -16,10 +16,10 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.livingplace.bundles.controlling</groupId>
-  <artifactId>org.livingplace.controlling.actions.actors.time</artifactId>
+  <artifactId>org.livingplace.controlling.informations.sensors.time</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>LivingPlace :: Controlling :: Actions :: Actors :: Time</name>
+  <name>LivingPlace :: Controlling :: Informations :: Sensors :: Time</name>
 
   <packaging>bundle</packaging>
 
@@ -43,10 +43,21 @@
       <artifactId>osgi_R4_compendium</artifactId>
       <optional>true</optional>
     </dependency>
+    <!-- Time Dependency -->
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.1</version>
+    </dependency>
     <!-- Controlling Dependencies -->
     <dependency>
       <groupId>org.livingplace.bundles.controlling</groupId>
-      <artifactId>org.livingplace.controlling.actions.registry.api</artifactId>
+      <artifactId>org.livingplace.controlling.informations.api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.livingplace.bundles.controlling</groupId>
+      <artifactId>org.livingplace.controlling.informations.registry.api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <!-- Component Annotations Dependencies -->
@@ -59,19 +70,6 @@
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.scr.annotations</artifactId>
       <version>1.7.0</version>
-    </dependency>
-    <!-- Testing Dependencies -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.8.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.9.0</version>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
