Refactored the karaf profile, has not worked out yet. mailed to karaf.users list.

--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,8 @@
           -->
           <provision>
             <param>--platform=felix</param>
-
+            <param>--log=debug</param>
+            
           </provision>
         </configuration>
         <executions>
