--- a/org.livingplace.controlling.knowledge.api/pom.xml
+++ b/org.livingplace.controlling.knowledge.api/pom.xml
@@ -12,6 +12,16 @@
   <properties>
     <bundle.symbolicName>${project.artifactId}</bundle.symbolicName>
     <bundle.namespace>${project.artifactId}</bundle.namespace>
+
+    <!-- Drools Dependencies -->
+    <org.apache.servicemix.bundles.jaxb-xjc.version>2.2.4_2</org.apache.servicemix.bundles.jaxb-xjc.version>
+    <org.apache.servicemix.bundles.xstream.version>1.4.3_1</org.apache.servicemix.bundles.xstream.version>
+    <org.apache.servicemix.bundles.protobuf-java.version>2.4.1_1</org.apache.servicemix.bundles.protobuf-java.version>
+    <org.apache.servicemix.bundles.stax-utils.version>20070216_1</org.apache.servicemix.bundles.stax-utils.version>
+    <org.apache.servicemix.bundles.woodstox.version>3.2.9_3</org.apache.servicemix.bundles.woodstox.version>
+    <org.apache.servicemix.bundles.antlr-runtime.version>3.4_2</org.apache.servicemix.bundles.antlr-runtime.version>
+    <org.apache.servicemix.bundles.antlr.version>3.4_1</org.apache.servicemix.bundles.antlr.version>
+    <org.apache.servicemix.bundles.ant.version>1.8.4_1</org.apache.servicemix.bundles.ant.version>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
@@ -89,4 +99,60 @@
       <version>1.7.0</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <!--
+         | the following instructions build a simple set of public/private classes into an OSGi bundle
+        -->
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>2.3.7</version>
+        <executions>
+          <execution>
+            <id>bundle-manifest</id>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>manifest</goal>
+            </goals>
+          </execution>
+        </executions>
+        <extensions>true</extensions>
+        <configuration>
+          <supportedProjectTypes>
+            <supportedProjectType>jar</supportedProjectType>
+            <supportedProjectType>bundle</supportedProjectType>
+          </supportedProjectTypes>
+          <instructions>
+            <!-- Bundle -->
+            <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+            <Bundle-Version>${project.version}</Bundle-Version>
+            <Bundle-Vendor>${project.groupId}</Bundle-Vendor>
+            <Bundle-ClassPath>.,{maven-dependencies}</Bundle-ClassPath>
+            <Include-Resource>{maven-resources}, {maven-dependencies}</Include-Resource>
+            <Embed-Dependency>*;scope=compile|runtime;inline=true;artifactId=!org.apache.felix.scr.*</Embed-Dependency>
+            <Embed-Transitive>true</Embed-Transitive>
+
+            <!-- Package -->
+            <Export-Package>
+              !${bundle.namespace}.internal.*,
+              ${bundle.namespace}.*;version="${project.version}",
+              org.osgi.service.component
+            </Export-Package>
+            <Private-Package>${bundle.namespace}.internal.*</Private-Package>
+            <Import-Package>*;resolution:=optional</Import-Package>
+            <!--<DynamicPackage-Import>*</DynamicPackage-Import>-->
+            <!--<_exportcontents>org.drools.*,org.jbpm.*,org.mvel2.*,com.google.protobuf.*,com.sun.codemodel.*</_exportcontents>-->
+
+            <!--Service-->
+            <Import-Service>org.osgi.service.log.LogService</Import-Service>
+            <Service-Component>
+              OSGI-INF/serviceComponents.xml
+            </Service-Component>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
