--- a/provision/pom.xml
+++ b/provision/pom.xml
@@ -20,6 +20,7 @@
     <org.apache.felix.bundlerepository.version>1.6.6</org.apache.felix.bundlerepository.version>
     <org.apache.felix.gogo.runtime.version>0.10.0</org.apache.felix.gogo.runtime.version>
     <org.apache.felix.gogo.shell.version>0.10.0</org.apache.felix.gogo.shell.version>
+    <org.apache.felix.webconsole.version>4.0.0</org.apache.felix.webconsole.version>
     <!-- Drools Dependencies -->
     <org.apache.servicemix.bundles.jaxb-xjc.version>2.2.4_2</org.apache.servicemix.bundles.jaxb-xjc.version>
     <org.apache.servicemix.bundles.xstream.version>1.4.3_1</org.apache.servicemix.bundles.xstream.version>
@@ -29,6 +30,7 @@
     <org.apache.servicemix.bundles.antlr-runtime.version>3.4_2</org.apache.servicemix.bundles.antlr-runtime.version>
     <org.apache.servicemix.bundles.antlr.version>3.4_1</org.apache.servicemix.bundles.antlr.version>
     <org.apache.servicemix.bundles.ant.version>1.8.4_1</org.apache.servicemix.bundles.ant.version>
+
   </properties>
 
   <packaging>pom</packaging>
@@ -50,6 +52,7 @@
       <artifactId>org.apache.felix.gogo.runtime</artifactId>
       <version>${org.apache.felix.gogo.runtime.version}</version>
     </dependency>
+
     <!-- Platform Provided OSGi Service implementations -->
     <dependency>
       <groupId>org.apache.felix</groupId>
@@ -71,8 +74,12 @@
       <artifactId>org.apache.felix.bundlerepository</artifactId>
       <version>${org.apache.felix.bundlerepository.version}</version>
     </dependency>
-
-     <!--Drools Dependencies-->
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.webconsole</artifactId>
+      <version>${org.apache.felix.webconsole.version}</version>
+    </dependency>
+    <!--Drools Dependencies-->
     <dependency>
       <groupId>org.apache.servicemix.bundles</groupId>
       <artifactId>org.apache.servicemix.bundles.jaxb-xjc</artifactId>
