--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
           -->
           <provision>
             <param>--platform=felix</param>
-            <param>--profiles=log,web</param>
+            <param>--profiles=web</param>
             <param>--log=debug</param>
           </provision>
         </configuration>
