--- a/provision/pom.xml
+++ b/provision/pom.xml
@@ -14,12 +14,17 @@
   <name>controlling - imported bundles</name>
 
   <properties>
+    <!--OSGi Framework Basics-->
+    <org.osgi.core.version>4.3.0</org.osgi.core.version>
+    <org.osgi.compendium.version>4.3.0</org.osgi.compendium.version>
+    <!-- Command line Extensions -->
+    <org.apache.felix.gogo.runtime.version>0.10.0</org.apache.felix.gogo.runtime.version>
+    <org.apache.felix.gogo.shell.version>0.10.0</org.apache.felix.gogo.shell.version>
+    <!-- Platform Provided OSGi Service implementations -->
     <org.apache.felix.log.version>1.0.1</org.apache.felix.log.version>
     <org.apache.felix.scr.version>1.6.0</org.apache.felix.scr.version>
     <org.apache.felix.configadmin.version>1.4.0</org.apache.felix.configadmin.version>
     <org.apache.felix.bundlerepository.version>1.6.6</org.apache.felix.bundlerepository.version>
-    <org.apache.felix.gogo.runtime.version>0.10.0</org.apache.felix.gogo.runtime.version>
-    <org.apache.felix.gogo.shell.version>0.10.0</org.apache.felix.gogo.shell.version>
     <!-- Drools Dependencies -->
     <org.apache.servicemix.bundles.jaxb-xjc.version>2.2.4_2</org.apache.servicemix.bundles.jaxb-xjc.version>
     <org.apache.servicemix.bundles.xstream.version>1.4.3_1</org.apache.servicemix.bundles.xstream.version>
@@ -31,8 +36,6 @@
     <org.apache.servicemix.bundles.ant.version>1.8.4_1</org.apache.servicemix.bundles.ant.version>
     <!--Webconsol Dependencies-->
     <org.apache.felix.webconsole.version>3.1.8</org.apache.felix.webconsole.version>
-    <org.osgi.core.version>4.1.0</org.osgi.core.version>
-    <org.osgi.compendium.version>4.1.0</org.osgi.compendium.version>
     <org.apache.felix.shell.version>1.0.0</org.apache.felix.shell.version>
     <org.osgi.service.obr.version>1.0.2</org.osgi.service.obr.version>
     <org.apache.felix.org.osgi.core.version>1.0.0</org.apache.felix.org.osgi.core.version>
@@ -47,6 +50,17 @@
   -->
 
   <dependencies>
+    <!--OSGi Framework Basics-->
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.core</artifactId>
+      <version>${org.osgi.core.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.compendium</artifactId>
+      <version>${org.osgi.compendium.version}</version>
+    </dependency>
     <!-- Command line Extensions -->
     <dependency>
       <groupId>org.apache.felix</groupId>
@@ -120,16 +134,6 @@
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.webconsole</artifactId>
       <version>${org.apache.felix.webconsole.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.core</artifactId>
-      <version>${org.osgi.core.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.compendium</artifactId>
-      <version>${org.osgi.compendium.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.felix</groupId>
