added the testfiles, also the .empty file for keeping the filder...

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,12 @@ target/
 local/
 
 # runner folder, except the ones needed for the ruleengine.
-runner/*
 !runner/rules/.empty
 !runner/rules/test.drl
+runner/bundles
+runner/cache
+runner/deploy-pom.xml
+runner/felix
 
 # Eclipse, Netbeans and IntelliJ files
 /.*
