Wrote the classloader, added logging printouts to the DroolsManager to be able to see fact creation and reasoning.

--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,9 @@
           -->
           <provision>
             <param>--platform=felix</param>
-            <param>--log=info</param>
+            <!--<para-m>-log=info</param>-->
             <param>--profiles=web</param>
+            <!--<para-m>-vmOptions="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"</param>-->
           </provision>
         </configuration>
         <executions>
