--- a/org.livingplace.controlling.knowledge.api/pom.xml
+++ b/org.livingplace.controlling.knowledge.api/pom.xml
@@ -81,6 +81,12 @@
     <!--<version>1.6.4</version>-->
     <!--</dependency>-->
 
+    <!--Logging Dependencies-->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.16</version>
+    </dependency>
     <!--LP Controlling Dependencies-->
     <dependency>
       <groupId>org.livingplace.bundles.controlling</groupId>
@@ -164,7 +170,7 @@
             <Bundle-ClassPath>.,{maven-dependencies}</Bundle-ClassPath>
 
             <Include-Resource>{maven-resources}, {maven-dependencies}</Include-Resource>
-            <Embed-Dependency>*;scope=compile|runtime;inline=true;artifactId=!org.apache.felix.*|org.livingplace.*|org.osgi.*</Embed-Dependency>
+            <Embed-Dependency>*;scope=compile|runtime;inline=true;artifactId=!org.apache.logging!org.apache.felix.*|org.livingplace.*|org.osgi.*</Embed-Dependency>
             <Embed-Transitive>true</Embed-Transitive>
 
             <!-- Package -->
@@ -173,13 +179,16 @@
               ${bundle.namespace}.*;version="${project.version}"
             </Export-Package>
             <Private-Package>${bundle.namespace}.internal.*</Private-Package>
-            <Import-Package>*;resolution:=optional</Import-Package>
+            <Import-Package>
+              *;resolution:=optional,
+              org.apache.log4j; version="[1.2,1.3)"; provider=paxlogging,
+              org.apache.commons.logging; version="[1.0,1.1)"; provider=paxlogging
+            </Import-Package>
             <!--<DynamicPackage-Import>*</DynamicPackage-Import>-->
             <!--<_exportcontents>org.drools.*,org.jbpm.*,org.mvel2.*,com.google.protobuf.*,com.sun.codemodel.*</_exportcontents>-->
 
             <!--Service-->
             <Import-Service>
-              org.osgi.service.log.LogService,
               org.livingplace.controlling.actions.registry.api.IActionRegistry,
               org.livingplace.controlling.informations.registry.api.IInformationRegistry,
               org.livingplace.controlling.informations.registry.api.IInformationRegistryFactory
